<resources>
    <string name="app_name">OpiniaoDeTudo</string>
    <string name="new_opinio">Nova Opiniao</string>
    <string name="form_title">Nome</string>
    <string name="form_title_field">Escreva o nome</string>
    <string name="form_review_name">Opinião</string>
    <string name="form_review_name_field">Escreva a opinião</string>
    <string name="form_label_photo">Foto</string>


    <string name="menu_list_reviews">Escreva a opinião</string>
    <string name="menu_list_reviews_label">Escreva a opinião</string>

    <string name="item_list_edit">Modificar</string>
    <string name="item_list_delete">Apagar</string>

    <string name="new_item">Novo Item</string>
    <string name="list_item">Listar Itens</string>
    <string name="item_list_map">Mapa</string>
    <string name="about">Sobre</string>
    <string name="summary_about">Informações do autor</string>


    <string name="delete_confirmation">Deseja Remover?</string>
    <string name="ok">Confirmar</string>
    <string name="cancel">Cancelar</string>

    <string name="night_mode">Modo Noturno</string>
    <string name="summary_night_mode">No modo noturno as cores do aplicativo ficam escuras</string>
    <string name="settings">Configurações</string>


    <string name="upload">Enviar Opinião</string>

    <string name="online">Sincronizar</string>

    <string name="image_description">Descrição da imagem</string>

    <string name="author_title">Autores</string>
    <string name="author_1">Luís Fernando Munhoz Fontana Neto</string>
    <string name="author_2">Lucas Marques Franco</string>
    <string name="author_3">Marcelo Ribeiro dos Santos</string>
    <string name="author_4">Diego Fernandes Paz</string>

</resources>
